src/pomodoro/pomodoro.css
.right-set {
  float: right;
}

.session-text {
  color: white;
  text-shadow: 2px 2px #355f6d;
}

.session-text-sub {
  color: white;
  text-shadow: 2px 2px #355f6d;
}

.controls {
  padding: 20px;
}

@media (max-width: 800px) {
  .right-set {
    float: left;
  }
}

@media (max-width: 800px) {
  .timers {
    padding-left: 28px;
    padding-bottom: 20px;
  }
}

@media (max-width: 800px) {
  .session-text {
    font-size: 30px;
  }
}

@media (max-width: 800px) {
  .progress {
    width: 275px;
    margin-left: 30px;
  }
}

@media (max-width: 800px) {
  .content {
    margin-top: 15px;
  }
}

